--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,9 +7,15 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/jquery/jquery-1.8.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/underscore/underscore-1.3.3.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/backbone/backbone-0.9.2.js")" type="text/javascript"></script>
     </head>
     <body>
+      <div  id="thingapp">
+        <h1>Play 2.0 Ajax Form Example</h1>
+        <h2>@title</h2>    
         @content
+      </div>
     </body>
 </html>
